# exrate-conversion-service

./: LICENSE  README.md  app.py  env_example  pyproject.toml
conversion_service/: config.py  exchange_rate_api.py  message_handler.py  utils.py  websocket_manager.py
tests/: test_exchange_rate.py  test_message_handler.py
