[tool.poetry]
name = "conversion-service"
version = "0.1.0"
description = ""
authors = ["rr3333mmAA"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.1"
aiohttp = "^3.10.10"
cachetools = "^5.5.0"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
